exports[`Resolve extensions > should replace extension with different extension 1`] = `
{
  "filePath": "./opt/esm/foo.js",
  "expected": "./opt/esm/foo.ts",
  "result": "./opt/esm/foo.ts"
}
`;

exports[`Resolve extensions > should replace extension with same extension 1`] = `
{
  "filePath": "./opt/esm/foo.js",
  "expected": "./opt/esm/foo.js",
  "result": "./opt/esm/foo.js"
}
`;

exports[`Resolve extensions > should replace extension with without extension 1`] = `
{
  "filePath": "./opt/esm/foo",
  "expected": "./opt/esm/foo.js",
  "result": "./opt/esm/foo.js"
}
`;

exports[`Resolve extensions > should replace file path extension if it is different from resolved extension 1`] = `
{
  "filePath": "./opt/ts/foo.js",
  "expected": "./opt/ts/foo.ts",
  "result": "./opt/ts/foo.ts"
}
`;

exports[`Resolve extensions > should resolve file path without extension 1`] = `
{
  "filePath": "./opt/esm/foo",
  "expected": "./opt/esm/foo.js",
  "result": "./opt/esm/foo.js"
}
`;

exports[`Resolve extensions > should throw error if file path does not exist 1`] = `
{
  "filePath": "path/to/non-existent-file"
}
`;
